fix layout issues

--- a/frontend/src/pages/pageStyle/MyChoices.scss
+++ b/frontend/src/pages/pageStyle/MyChoices.scss
@@ -297,7 +297,9 @@ font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 24px;
-color: $black
+color: $black;
+align-content: center;
+justify-content: center;
 
 }
 .cesarean-birth-8{
